more responses to review comments